fix: Customization to support unitid in request. In legacy unitid is supporting only during connect time, after connection established it's impossible to change unitId